# ScriptUI-Dialog-Builder-Joonas

build-pwa/: package.json
build-pwa/src-tauri/: Cargo.toml  tauri.conf.json
build-pwa/src-tauri/capabilities/: default.json
build-pwa/src-tauri/icons/: icon.icns
build-pwa/src-tauri/src/: main.rs
build-pwa/src/assets/js/: libraries.js
